[package]
name = "elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.4.2", features = ["std"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "1.0.58"
typed-builder = "0.18.1"
